dist/budget/Namespace.budget.k8s.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    app.kubernetes.io/name: budget
  name: budget
  namespace: budget
