dist/budget/Deployment.budget.k8s.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: budget
  namespace: budget
spec:
  minReadySeconds: 0
  progressDeadlineSeconds: 600
  replicas: 1
  selector:
    matchLabels:
      cdk8s.io/metadata.addr: parent-chart-deployment-c8ae4184
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        cdk8s.io/metadata.addr: parent-chart-deployment-c8ae4184
    spec:
      automountServiceAccountToken: false
      containers:
        - env:
            - name: CONNECTION_PROVIDER
              value: mysql
            - name: CONNECTION_SERVER
              value: db
            - name: CONNECTION_PORT
              value: "3306"
            - name: CONNECTION_DATABASE
              value: budget
            - name: CONNECTION_USER
              value: root
            - name: APPSETTINGS_CULTURE
              value: en-US
            - name: CONNECTION_PASSWORD
              valueFrom:
                secretKeyRef:
                  key: MARIADB_ROOT_PASSWORD
                  name: db-creds
          image: axelander/openbudgeteer:latest
          imagePullPolicy: Always
          name: main
          ports:
            - containerPort: 80
          resources:
            limits:
              memory: 512Mi
            requests:
              cpu: 50m
              memory: 128Mi
          securityContext:
            allowPrivilegeEscalation: false
            privileged: false
            readOnlyRootFilesystem: false
            runAsNonRoot: false
          startupProbe:
            failureThreshold: 3
            tcpSocket:
              port: 80
      dnsPolicy: ClusterFirst
      hostNetwork: false
      restartPolicy: Always
      securityContext:
        fsGroupChangePolicy: Always
        runAsNonRoot: false
      setHostnameAsFQDN: false
