dist/budget/Service.db.k8s.yaml
apiVersion: v1
kind: Service
metadata:
  name: db
  namespace: budget
spec:
  externalIPs: []
  ports:
    - name: mysql
      port: 3306
      targetPort: 3306
  selector:
    cdk8s.io/metadata.addr: db-db-sts-c843c760
  type: ClusterIP
