dist/budget/Ingress.budget.k8s.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
  name: budget
  namespace: budget
spec:
  rules:
    - host: budget.cmdcentral.xyz
      http:
        paths:
          - backend:
              service:
                name: budget
                port:
                  number: 80
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - budget.cmdcentral.xyz
      secretName: ingress-tls
